# OPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/olivine/oplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/olivine/oplayer/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/olivine/oplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_audio/: build.gradle
lib_audio/src/androidTest/java/com/olivine/lib_audio/: ExampleInstrumentedTest.kt
lib_audio/src/main/: AndroidManifest.xml
lib_audio/src/main/cpp/: CMakeLists.txt
lib_audio/src/main/cpp/decode/: AudioDecode.cpp  AudioDecode.h  BaseDecode.cpp  BaseDecode.h
lib_audio/src/main/cpp/jni/: native-lib.cpp
lib_audio/src/main/cpp/simple/: SimplePlayer.cpp  SimplePlayer.h
lib_audio/src/main/cpp/utils/: NativeQueue.h
lib_audio/src/main/java/com/olivine/lib_audio/: AudioNativeManager.kt
lib_audio/src/test/java/com/olivine/lib_audio/: ExampleUnitTest.kt
